--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="overlap-group">
           <img
             class="image-fx"
-            src="public/Image_fx (12).png"
+            src="public/Image_fx (12) 1.png"
             alt="Background image"
           />
           <nav class="navbar">
