--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GTG Perfumes</title>
     <link rel="stylesheet" href="globals.css" />
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="responsive.css"/>
   <script src="https://kit.fontawesome.com/c96cbae3b3.js" crossorigin="anonymous"></script>
   </head>
 <body>
