--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
 
 <div id="ui-layer">
   <div class="glass-card">
-    <h1 id="main-text" class="text-3xl md:text-5xl font-extrabold text-pink-600">
+    <h1 id="main-text" class="text-3xl md:text-5xl font-extrabold text-pink-600"> Komal
       Will you be my Valentine?
     </h1>
 
